# odra

./: Cargo.toml  README.md
crates/core/: Cargo.toml
crates/core/src/: compiler.rs  input_gobbler.rs  main.rs  spec_get_vm.rs  value.rs  vm.rs  words.rs
crates/macros/: Cargo.toml
crates/macros/src/: lib.rs
examples/: definitions.od
prelude/: definitions.od
src/: main.rs  vm.rs
vscode-odra/: CHANGELOG.md  README.md  package.json  vsc-extension-quickstart.md  vscode-odra-0.0.1.vsix
vscode-odra/syntaxes/: odra.tmLanguage.json
