[package]
name = "odra"
version = "0.1.0"
edition = "2018"  # TODO: 2021 when rust-analyzer supports it

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
deno_core = "0.98.0"
serde = "1.0.127"
serde_v8 = "0.9.0"
color-eyre = "0.5.11"
linkme = "0.2.6"
macros = { path = "../macros" }
rustyline = "9.0.0"
