[package]
name = "macros"
version = "0.0.0"
edition = "2018"

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proc-macro2 = "1.0.28"
syn = { version = "1.0.75", features = ["full"] }
quote = "1.0.9"
proc-macro-crate = "1.1.0"